Added rewards endpoints
