# src/types/response-types/userResponseTypes.ts
@@ -42,3 +42,13 @@ export type GetQuizQuestionsResponse = {
     description: string;
     answers: string[];
 }[];
+
+export type GetUserAvailableRewardsResponse = {
+    rewardId: ObjectId;
+    rewardDescription: string;
+    rewardCost: number;
+}[];
+
+export type BuyUserRewardResponse = {
+    newPoints: number;
+};
